<resources>
    <string name="app_name">HomeWork7</string>
    <string name="next_menu">next\n</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="Curretn">Current Policies</string>
    <string name="export">Export as CSV</string>
    <string name="Brand">Brand</string>
    <string name="Origin">Origin Country</string>
    <string name="Product">"Product Category "</string>
    <string name="et_policy">Policy</string>
    <string name="Policies">Policies</string>
    <string name="Profil">Профиль</string>
    <string name="Nastroiki">Настройки</string>
    <string name="Bezopasnost">Безопасность</string>
</resources>