<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/newWhite">


    <TextView
        android:id="@+id/tv_policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/Policies"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_policy"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:hint="@string/et_policy"
        android:paddingStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_policies" />

    <EditText
        android:id="@+id/et_product"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:hint="@string/Product"
        android:paddingStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_policy" />

    <EditText
        android:id="@+id/et_origin"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:hint="@string/Origin"
        android:paddingStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_product" />

    <EditText
        android:id="@+id/et_brand"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:hint="@string/Brand"
        android:paddingStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_origin" />


    <TextView
        android:id="@+id/tv_curretn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/Curretn"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_brand" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_export"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/red"
        android:text="@string/export"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_curretn" />

    <FrameLayout
        android:layout_width="422dp"
        android:layout_height="98dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="34dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:background="@drawable/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="62dp"
            android:gravity="bottom"
            android:text="Country of Origin"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="62dp"
            android:gravity="bottom"
            android:text="Product Category"
            android:textSize="16sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>